# shacl2datalog

./: .gitignore  Cargo.toml  README.md  flake.nix  nix-python.sh  out.dl  pyproject.toml  shacl.dl
.github/workflows/: pylint.yml  ruff.yml
datalog_library/: functors.cpp  makelib.sh  out.dl  shacl.dl
shacl2datalog/: __init__.py  datalog_shape_graph.py  main.py  name.py  read.py  rules.py  shape.py  shape_to_datalog.py  term_to_datalog.py  translate.py
shacl_tests/: source.txt
src/shacl2datalog/: Rules.py  __init__.py  main.py  read.py  rules.py  translate.py
