[project]
name = "shacl2datalog"
version = "0.1.0"
description = "SHACL to Datalog transpiler"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "rdflib>=7.1.2",
]

[project.scripts]
main = "shacl2datalog:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.6.7",
]
