[project]
name = "shacl2datalog"
version = "0.5.0"
description = "SHACL to Datalog transpiler"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pyshacl>=0.29.1",
    "rdflib>=7.1.2",
]

[project.scripts]
main = "shacl2datalog:main.main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.6.7",
]
